# VO_Visualizor

./: CMakeLists.txt  README.md  test.sh
samples/: CameraTrajectory.txt  CameraTrajectory2.txt  CameraTrajectory_Stereo.txt  CameraTrajectory_Stereo2.txt  CameraTrajectory_mono_08.txt  CameraTrajectory_stereo_08.txt  ImageCollectionCoordinates.txt
src/: demo.cpp
